# Sparc

./: .gitignore  BasicDataStructure.h  Cargo.toml  DEBUG.consensus.fasta  GraphConstruction.h  GraphSimplification.h  README.md  Sparc.cpp  build.rs  main  subgraph.dot
sparc-source-code/: Align.cpp  Align.h  BasicDataStructure.cpp  BasicDataStructure.h  GraphConstruction.cpp  GraphConstruction.h  GraphSimplification.cpp  GraphSimplification.h  Makefile  main.cpp  sparc.cpp  sparc.h
src/: lib.rs
testdata2/: backbone-0.fasta  backbone-0.mapped.m5  out.consensus.fasta
