[package]
name = "sparc"
version = "0.1.1"
edition = "2024"
description = "sparc rust binding"
license = "MIT"
repository = "https://github.com/keithyin/Sparc"
exclude = [
    ".vscode/*",
    "testdata/*",
    "testdata2/*",
    "utility/*",
    "*.txt",
    "*.dot",
    "DEBUG.consensus.fasta",
]

[dependencies]
